 # Fixed issue [#20292] Cannot change a menu type that is set to alias.
 # Fixed issue [#20172] Various errors during module saving in backend.
 # Fixed bug where you could not add a new Adminstrator module.
 # Fixed issue [#20454] Menu item filter includes archived state (Elin Waring).
 # Fixed bug in com_content category view, default layouts where date was not honouring option settings.

16-May-2010 Mark Dexter
# [#20312] Access Control not implemented in menus
# [#20450] Missing modal and field for single news feed selection
# Sample data fixes (Elin Waring)
# Fix default component parameters (Elin Waring)
# Partial fix of system tests

16-May-2010 Chris Davenport
$ Translate help screen titles in com_admin

16-May-2010 Ron Severdia
# Fixed CSS and bug in admin login
# IE compatibility fixes

16-May-2010 Sam Moffatt
 # Fixed issue with front end router and invalid menu items
 # Fixed [#20449] Web link submit form is broken (thanks Elin)

16-May-2010 Christophe Demko
 # Fix [#20428] Deleting A Menu Does Not Delete Menu Items
 # Reenabling filters in manage view
 # fix some ACL

16-May-2010 Ron Severdia
# BlueStork fixes, new icons, language fixes

16-May-2010 Jean-Marie Simonet
$ Fixed some Beez language keys
^ Fixed Beez sitedescription
$ Fixed and consolidate some language strings
# Fixed base category description [20447]. Thanks Elin.
$ Fixed some language strings

15-May-2010 Ron Severdia
# Fixed CSS issues with BlueStork
$ Corrected language strings
# Fixed UI exceptions
+ New BlueStork icons

15-May-2010 Chris Davenport
# Fix [20375] Undefined variable in com_admin
# Fixed bad translation of help key references in com_admin

15-May-2010 Mark Dexter
# Fixed issues with sample data (Elin Waring)
^ Added title and subtitle to the params (Angie Radtke)
^ Added joomla_logos (Angie Radtke)
# Updated language file (Angie Radtke)
# Deleted unused image (Angie Radtke)
# Fixed language string (Angie Radtke)